--- a/index.html
+++ b/index.html
@@ -1,67 +1,58 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Bryan's GitHub Page</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="full, stack, front-end, backend, web, website, webpage, landing, computer, software, developer, engineer">
-    <meta name="author" content="bryanjob">
-    <meta name="description" content="Full stack developer">
-    <style>
-      body {
-        color: #C9D1D9; 
-        font-family: Arial, Helvetica, sans-serif; 
-        background-color: #0D1117; 
-      }
-  
-      .nav-top {
-        overflow: hidden;
-        background-color: #01568C; 
-      }
-  
-      .nav-top a {
-        float: left;
-        color: #C9D1D9; 
-        padding: 14px 16px;
-        font-size: 24px; 
-        text-align: center;
-        font-weight: bold;  
-        text-decoration: none; 
-        background-color: #01568C; 
-      }
-  
-      .nav-top a:hover {
-        color: #01568C;
-        background-color: #C9D1D9; 
-      }
-  
-      .nav-top a.active {
-        background-color: #080A3B;
-        color: #C9D1D9;
-      }
-      
-      section {
-        color: #C9D1D9; 
-        height: 100vh; 
-        padding-top: 5px; 
-        padding-left: 25px; 
-        padding-right: 25px; 
-        padding-bottom: 5px; 
-        background-color: #0D1117;
-        background-image: url('https://images.freeimages.com/images/large-previews/01a/technology-background-1632715.jpg'); 
-      }
-    </style>
-  </head>
-  <body>
-    <nav class="nav-top">
-      <a class="active" href="#">Home</a>
-      <a href="#">About</a>
-      <a href="#">Contact</a>
-    </nav>
-    <section>
-      <h1>Hi, I am Bryan</h1>
-      <h1>Welcome to my GitHub page!</h1>
-        <img src="./assets/images/bryan_pic.jpg" alt="Bryan's Pic" />
-    </section>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Bryan's GitHub Page</title>
+  <link rel="stylesheet" href="./style/style.css">
+  <!-- <script src="./script/script.js" defer></script> -->
+</head>
+<body id="page-top">
+  <nav class="navbar-top">
+    <a class="navbar-active" href="#home">Home</a>
+    <a href="./portfolio.html">Portfolio</a>
+  </nav>
+  <div class="grid">
+    <header>&nbsp;</header>
+    <aside>&nbsp;</aside>
+    <article>
+      <table class="content">
+        <tr>
+          <td class="content-column">
+            <p class="bio">
+              <img class="avatar" src="https://avatars.githubusercontent.com/u/74436343?v=4" alt="Bryan's GitHub Avatar" title="Bryan's GitHub Avatar">
+              <br><br>
+              Hi, my name is Bryan.  Currently I am a student enrolled in a full-stack development course using the 
+              <a href="https://www.mongodb.com/mern-stack" target="_blank" rel="noopener noreferrer">MERN stack</a>.  
+              In this program, I have created a number of interesting projects including, but not limited to 
+              the Real-Time Bus Tracker, the Eye Exercise and the PacMen Exercise.  I have thoroughly enjoyed working 
+              on them, please check them out in my portfolio.
+              <br><br>
+              <table class="user-info">
+                <tr>
+                  <td class="user-info-field">GitHub Username: </td><td><a href="https://github.com/bryanjob" target="_blank" rel="noopener noreferrer">bryanjob</a></td>
+                </tr>
+                <tr>
+                  <td class="user-info-field">LinkedIn: </td><td><a href="https://www.linkedin.com/in/bryan-app-dev" target="_blank" rel="noopener noreferrer">linkedin.com/in/bryan-app-dev</a></td>
+                </tr>
+                <tr>
+                  <td class="user-info-field">E-Mail: </td><td><a href="mailto:bryan.app.dev+github@gmail.com">bryan.app.dev+github@gmail.com</a></td>
+                </tr>
+              </table>
+            </p>
+          </td>
+          <td class="content-column">
+            <p class="intro-video">
+              An MIT professional development introduction video to promote the program I am enrolled in.  <br><br>
+              <iframe width="320" height="180" src="https://www.youtube.com/embed/5CiCtj_2Qsg?mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </p>
+          </td>
+        </tr>
+      </table>
+    </article>
+    <aside>&nbsp;</aside>
+    <footer>&nbsp;</footer>
+  </div>
+  <div class="bar-bottom">Copyright (c) 2021</div>
+</body>
 </html>
